# kmer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  aarch64_toolchain.cmake
src/: main-infinite-loop.c  main-omp.c  main-original.c  main.c
